Serious refactor to down-scope v0.1.0 features
