# appserver/jobs.go
@@ -5,19 +5,19 @@ import (
 	"fmt"
 
 	"github.com/gofiber/fiber/v2"
-	"github.com/jdfergason/sonrai/db"
+	"github.com/penny-vault/sonrai/db"
 	"github.com/rs/zerolog/log"
 )
 
-func listProducers(c *fiber.Ctx) error {
-	producers := db.ListProducers()
-	return c.JSON(producers)
+func listJobs(c *fiber.Ctx) error {
+	jobs := db.ListJobs()
+	return c.JSON(jobs)
 }
 
-func upsertProducer(c *fiber.Ctx) error {
-	var producer db.Producer
+func upsertJob(c *fiber.Ctx) error {
+	var job db.Job
 	body := c.Request().Body()
-	err := json.Unmarshal(body, &producer)
+	err := json.Unmarshal(body, &job)
 	if err != nil {
 		log.Error().Str("Body", string(body)).Msg("cannot unmarshal body")
 		return fiber.NewError(405, fmt.Sprintf("cannot unmarshal body: %s", err.Error()))
